--- a/nerd-olympics-server/NerdOlympicsAPI/appsettings.json
+++ b/nerd-olympics-server/NerdOlympicsAPI/appsettings.json
@@ -6,7 +6,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "NerdOlympicsDB": "Server=localhost;Database=NerdOlympics;Trusted_Connection=True;User=sa;Password=1"
-  }
+  "ConnectionStrings": { }
 }
