--- a/nerd-olympics-server/NerdOlympicsAPI/appsettings.json
+++ b/nerd-olympics-server/NerdOlympicsAPI/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWTSecret": "my-32-character-ultra-secure-and-ultra-long-secret",
+  "TokenIssuer": "NerOlympicsAPI",
   "AllowedHosts": "*",
-  "ConnectionStrings": { }
+  "ConnectionStrings": {
+    "NerdOlympicsDB": ""
+  }
 }
