--- a/nerd-olympics-server/NerdOlympicsAPI/appsettings.Development.json
+++ b/nerd-olympics-server/NerdOlympicsAPI/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "JWTSecret": "my-32-character-ultra-secure-and-ultra-long-secret",
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NerdOlympicsDB": ""
   }
 }
