--- a/nerd-olympics/package.json
+++ b/nerd-olympics/package.json
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dicebear/collection": "^5.3.0",
+    "@dicebear/core": "^5.3.0",
     "@next/font": "13.1.6",
+    "@resvg/resvg-js": "^2.3.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "axios": "^1.3.0",
+    "crypto-js": "^4.1.1",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
@@ -22,5 +26,8 @@
     "react-icons": "^4.7.1",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/crypto-js": "^4.1.1"
   }
 }
