--- a/nerd-olympics/package.json
+++ b/nerd-olympics/package.json
@@ -12,10 +12,12 @@
     "@dicebear/collection": "^5.3.0",
     "@dicebear/core": "^5.3.0",
     "@next/font": "13.1.6",
+    "@react-three/fiber": "^8.11.2",
     "@resvg/resvg-js": "^2.3.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@types/three": "^0.149.0",
     "axios": "^1.3.0",
     "crypto-js": "^4.1.1",
     "eslint": "8.33.0",
@@ -25,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "sass": "^1.57.1",
+    "three": "^0.149.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
