--- a/nerd-olympics/package.json
+++ b/nerd-olympics/package.json
@@ -12,6 +12,7 @@
     "@dicebear/collection": "^5.3.0",
     "@dicebear/core": "^5.3.0",
     "@next/font": "13.1.6",
+    "@react-three/drei": "^9.56.25",
     "@react-three/fiber": "^8.11.2",
     "@resvg/resvg-js": "^2.3.1",
     "@types/node": "18.11.18",
