--- a/nerd-olympics-server/NerdOlympicsAPI/NerdOlympics.API.csproj
+++ b/nerd-olympics-server/NerdOlympicsAPI/NerdOlympics.API.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\NerdOlympic.Data\NerdOlympics.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FactoryPattern\Models\CompetitionTypes\" />
+  </ItemGroup>
+
 </Project>
